--- a/sellerDashboard.html
+++ b/sellerDashboard.html
@@ -15,10 +15,13 @@
       <!-- Create Button -->
 
       <div class="mb-3 text-center">
-        <button type="button" class="btn btn-primary ml-auto" id="createItem"><b>+ List a New Item</b></button>
+        <button type="button" class="btn btn-primary ml-auto" id="createItem"><h4><b>+ List a New Item</b></h4></button>
       </div>
       <ul id="items" class="list-group"></ul>
       <form id="item-details">
+        <br>
+        <h5>NOTE: Below is Update and Delete form, you can click on any above listed item's name and the form will be auto filled</h5>
+        <br>
         <div class="form-group">
           <label for="name">Name:</label>
           <input type="text" class="form-control" id="name" name="name">
