--- a/createNewItem.html
+++ b/createNewItem.html
@@ -51,6 +51,7 @@
         </form>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="javascript/createNewItem.js"></script>
    
 </body>
 </html>
